--- a/FoodBudgetSuggestion/www/index.html
+++ b/FoodBudgetSuggestion/www/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <script type="text/javascript" src="js/index.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
         <title>Food Budget Suggestion</title>
     </head>
     <body>
-        
+        <div>
+            <!-- Simple header with fixed tabs. -->
+            <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+                        mdl-layout--fixed-tabs">
+            <header class="mdl-layout__header">
+                <div class="mdl-layout__header-row">
+                <!-- Title -->
+                <span class="mdl-layout-title">Food Budget Suggestion</span>
+                </div>
+            </header>
+            <div class="mdl-layout__drawer">
+                <span class="mdl-layout-title">Title</span>
+            </div>
+            <main class="mdl-layout__content">
+                <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+                <div class="page-content" style="padding-top: 250px;">
+                    <!-- Your content goes here -->
+                    <main class="mdl-layout mdl-js-layout mdl-layout__content">
+                            <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+                                <div class="page-content">
+                                    <center id="center-input">
+                                       <form action="list.html">
+                                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                                <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="budget" name="budget">
+                                                <label class="mdl-textfield__label" for="sample4" id="input">Your Money.....</label>
+                                                <span class="mdl-textfield__error">Input is not a number!</span>
+                                            </div>
+                                            <br>
+                                            <a id="submit" onclick="submitBudget()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                                                Submit
+                                            </a>
+                                        </form>
+                                    </center>
+                                </div>
+                            </section>
+                        </main>
+                </div>
+                </section>
+            </main>
+            </div>
+        </div>
+        <script type="text/javascript" src="js/firebase.js"></script>
+        <script>
+            function submitBudget(){
+                var budget = document.getElementById('budget').value;
+                var url = 'list.html?budget=' + encodeURIComponent(budget);
+                document.location.href = url;
+            }
+        </script>
     </body>
 </html>
